style.css
body{
    margin: 0;
    padding: 0;
    font-size: 21px;
    color:azure;
    box-sizing: border-box;
    overflow: hidden;}


.container {
    height: 100vh;
    width: 100%;
    background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(library.jpeg);
    background-position: center;
    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    background-size: cover;
    padding-right: 10%;
    padding-left: 12%;
padding-top: 17%;}

* {
	box-sizing: border-box;
}

::-webkit-scrollbar {
	width: 20px;
}

::-webkit-scrollbar-track {
	background: #ae9d72;
	background-image: url("https://www.transparenttextures.com/patterns/black-paper.png");
}

::-webkit-scrollbar-thumb {
	background: #ae9d72;
}

::-webkit-scrollbar-thumb:hover {
	background: #8bba98;
}

body {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	height: 100vh;
	overflow: hidden;
	background: #697854;
	margin: 0;
	padding: 0;
	font-family: "Josefin Slab", serif;
}

.background {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background: url("https://picsum.photos/id/112/3840/2160");
	background-size: cover;
	background-position: center top;
	z-index: -1;
	filter: blur(10px);
}

.navbar{ width: 100%;
margin: auto;
padding: 25px;
justify-content: space-between;
align-items: center;
background-color: rgb(12, 12, 18);
text-decoration:none; 
font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;}

.navbar a {
    float: right;
    justify-content: center;
    color: #f2f2f2;
    text-align: center;
    padding: 4px 9px;
    text-decoration: none;
    font-size: 15px;
  }

   
  a.button2{
    display:inline-block;
    padding:0.7em 3em;
    border:0.16em solid #FFFFFF;
    margin:0 0.3em 0.3em 0;
    padding-right: 45%
    box-sizing: border-box;
    text-decoration:none;
    text-transform:uppercase;
    text-align:center;
    font-family:'Roboto',sans-serif;
    font-weight:400;
    color:#FFFFFF;
    text-align:center;
    transition: all 0.15s}
   
    a.button2:hover{
    color:#DDDDDD;
 border-color:#DDDDDD;
    }

    a.button2:active{
    color:#BBBBBB;
    border-top-color:#BBBBBB;
    @media all and (max-width:30em)}

    a.button2:{
        margin-left: auto;
        margin-right: auto;
        width: 8em
    } 
    

